testfx/errors/error_tests/err_10_unclosed_string.fx
// 测试10: 字符串错误 - 未闭合的字符串
msg := "hello world
